--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "request": "^2.85.0",
+    "request-promise": "^4.2.2",
     "viber-bot": "^1.0.13",
     "winston": "^2.4.1",
     "winston-console-formatter": "^1.0.0-beta.3"
